squished all bugs

--- a/styles/details.css
+++ b/styles/details.css
@@ -1,12 +1,13 @@
 .details {
-    display: fle;
+    display: flex;
     justify-content: space-evenly;
 }
 
-.detail--column {
+.detail--column  {
     flex-basis: 24%;
-    margin: 0 2rem;
+    margin: 0.2rem;
     border: 1px dotted goldenrod;
+    padding: 15px;
 }
 
 .assignments {
